Maj contact + suppression erreur validateur HTML et CSS

--- a/MenuLaNoteEntchantée.html
+++ b/MenuLaNoteEntchantée.html
@@ -30,7 +30,7 @@
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
                     
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Ravioles de foie gras </p>
@@ -41,7 +41,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Caviar osciètre </p>
@@ -52,7 +52,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                         
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Homard et espuma de potiron</p>
@@ -63,7 +63,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                   
                     </div>
 
-                    <div class="commande" id="commande4">
+                    <div class="commande commande4">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Foie gras de canard cuit entier</p>
@@ -78,7 +78,7 @@
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Noix de coquilles Saint-Jacques</p>
@@ -89,7 +89,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Langoustine poêlée</p>
@@ -100,7 +100,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Mijoté de queue de boeuf </p>
@@ -114,7 +114,7 @@
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Macaron noisette et chocolat</p>
@@ -125,7 +125,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                     
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Baba au rhum revisité </p>
@@ -136,7 +136,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Tarte au citron meringuée </p>
@@ -167,7 +167,7 @@
             </div>
 
             <p>Mention légales</p>
-            <p>Contact</p>
+            <a class="contact" href="mailto:ohmyfood@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
