--- a/MenuLaPaletteDuGout.html
+++ b/MenuLaPaletteDuGout.html
@@ -29,7 +29,7 @@
             <div class="tousCarte">
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Fricassée d'escargot</p>
@@ -40,7 +40,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Foie gras de canard mi-cuit</p>
@@ -51,7 +51,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                   
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Oeuf au plat</p>
@@ -65,7 +65,7 @@
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Filet de boeuf aux herbes</p>
@@ -76,7 +76,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Parmentier de queue de boeuf</p>
@@ -87,7 +87,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Filet de turbot</p>
@@ -101,7 +101,7 @@
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Paris-Brest</p>
@@ -112,7 +112,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>              
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Macaron au chocolat d'exception </p>
@@ -123,7 +123,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Mousse au chocolat </p>
@@ -154,7 +154,7 @@
             </div>
 
             <p>Mention légales</p>
-            <p>Contact</p>
+            <a class="contact" href="mailto:ohmyfood@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
