--- a/MenuLeDéliceDesSens.html
+++ b/MenuLeDéliceDesSens.html
@@ -29,7 +29,7 @@
             <div class="tousCarte">
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Tartare de thon</p>
@@ -40,7 +40,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Bouchée de homard croustillant </p>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                       
                     </div>
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Velouté de cèpes </p>
@@ -64,7 +64,7 @@
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Poulet rôti aux herbes de Provence </p>
@@ -75,7 +75,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Langouste rôtie </p>
@@ -86,7 +86,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Côte de boeuf Angus </p>
@@ -111,7 +111,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                  
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Crème brulée</p>
@@ -122,7 +122,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Tiramisu</p>
@@ -153,7 +153,7 @@
             </div>
 
             <p>Mention légales</p>
-            <p>Contact</p>
+            <a class="contact" href="mailto:ohmyfood@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
