--- a/MenuALaFrancaise.html
+++ b/MenuALaFrancaise.html
@@ -30,7 +30,7 @@
 
                 <div class="carte">
                     <p class="type">ENTRÉES</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Tartare de poulpe acidulé</p>
@@ -41,7 +41,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Velouté de légumes d'antan</p>
@@ -52,7 +52,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                        
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Soupe à l'oignon</p>
@@ -66,7 +66,7 @@
 
                 <div class="carte">
                     <p class="type type2">PLATS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Coquilles Saint-Jacques</p>
@@ -77,7 +77,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Magret de canard</p>
@@ -88,7 +88,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Pigeonneau d’Ille-et-Vilaine</p>
@@ -102,7 +102,7 @@
 
                 <div class="carte">
                     <p class="type type2">DESSERTS</p>
-                    <div class="commande" id="commande1">
+                    <div class="commande commande1">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Pétales de violettes glacés</p>
@@ -113,7 +113,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>                      
                     </div>
 
-                    <div class="commande" id="commande2">
+                    <div class="commande commande2">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Fondant au chocolat</p>
@@ -124,7 +124,7 @@
                         <div class="coche"><i class="fa-solid fa-circle-check check"></i></div>    
                     </div>
 
-                    <div class="commande" id="commande3">
+                    <div class="commande commande3">
                         <div class="JCP">
                             <div class="info">
                                 <p class="plat">Millefeuille croustillant</p>
@@ -155,7 +155,7 @@
             </div>
 
             <p>Mention légales</p>
-            <p>Contact</p>
+            <a class="contact" href="mailto:ohmyfood@gmail.com">Contact</a>
         </div>
     </footer>
 </body>
