--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="carré8"></div>
         <div class="carré9"></div>
     </div>
+    <!--<div class="loadingPage"></div>-->
     <div class="loadingPage">
         <header>
             <nav class="navAccueil">
