--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <div class="carré8"></div>
         <div class="carré9"></div>
     </div>
-    <!--<div class="loadingPage"></div>-->
     <div class="loadingPage">
         <header>
             <nav class="navAccueil">
@@ -72,6 +71,7 @@
                     <div class="colone">
                         <a class="textDecorationNone" href="MenuLaPaletteDuGout.html">
                             <div class="restaurantCarte">
+                                <div class="nouveau">Nouveau</div>
                                 <img class="restaurantIMG" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant jay wennington">
                                 <div class="restaurantInfo">
                                     <div class="restaurantInfoE">
@@ -88,6 +88,7 @@
 
                         <a class="textDecorationNone" href="MenuLaNoteEntchantée.html">
                             <div class="restaurantCarte">
+                                <div class="nouveau">Nouveau</div>
                                 <img class="restaurantIMG" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant la note enchantée">
                                 <div class="restaurantInfo">
                                     <div class="restaurantInfoE">
